# generalized-paper-principle

./: PATTERNS.md  README.md  SKILL.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
bench/: bench.py  bench_vision.py
reference/: __init__.py  calc.py  char_ops.py  verify.py
tests/: _path.py  test_calc.py  test_char_ops.py  test_verify.py
